crates/compiler/tests/parse_errors/module_exposing.txt
-- UNFINISHED MODULE DECLARATION ---------------------------------- src/Main.elm

I am parsing an `module` declaration, but I got stuck here:

1| module Main exposing
                       ^
Here are some examples of valid `module` declarations:

    module Main exposing (..)
    module Dict exposing (Dict, empty, get)

I generally recommend using an explicit exposing list. I can skip compiling a
bunch of files when the public interface of a module stays the same, so exposing
fewer values can help improve compile times!

